Test libstdc++ with clang

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,16 +19,25 @@ jobs:
                   python-version: 3.8
             - name: Install pyyaml
               run: pip install pyyaml
-            - name: Install Clang
+            - uses: actions/cache@v1
+              id: cache-clang
+              with:
+                  path: /var/cache/apt/archives
+                  key: clang-cache-${{ github.sha }}
+            - name: Download Clang
+              if: steps.cache-clang.outputs.cache-hit != 'true'
               run: |
                   REPO_NAME='deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic main'
                   wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
                   sudo add-apt-repository "$REPO_NAME"
                   sudo apt-get update
-                  sudo apt-get install -y clang-$LLVM_VERSION libc++-$LLVM_VERSION-dev --no-install-recommends
-                  echo "::set-env name=PATH::$PWD/bin:$PATH"
+                  sudo apt-get install --download-only -y clang-$LLVM_VERSION libc++-$LLVM_VERSION-dev
+            - name: Install Clang
+              run: |
+                  sudo apt-get install -y clang-$LLVM_VERSION libc++-$LLVM_VERSION-dev
                   mkdir bin
                   cp -s /usr/bin/clang-$LLVM_VERSION bin/clang
+                  echo "::set-env name=PATH::$PWD/bin:$PATH"
 
             - name: Test attributes
               run: |
@@ -70,3 +79,28 @@ jobs:
               run: |
                   python3.8 tools/do_test.py gcc library --verbose
 
+            - uses: actions/cache@v1
+              id: cache-clang
+              with:
+                  path: /var/cache/apt/archives
+                  key: clang-cache-${{ github.sha }}
+            - name: Download Clang
+              if: steps.cache-clang.outputs.cache-hit != 'true'
+              run: |
+                  REPO_NAME='deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic main'
+                  wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
+                  sudo add-apt-repository "$REPO_NAME"
+                  sudo apt-get update
+                  sudo apt-get install --download-only -y clang-$LLVM_VERSION libc++-$LLVM_VERSION-dev
+            - name: Install Clang
+              run: |
+                  sudo apt-get install -y clang-$LLVM_VERSION
+                  mkdir bin
+                  cp -s /usr/bin/clang-$LLVM_VERSION bin/clang
+                  echo "::set-env name=PATH::$PWD/bin:$PATH"
+
+            - name: Test library with Clang
+              run: |
+                  python3.8 tools/do_test.py gcc library --verbose \
+                    --cc clang \
+                    --extra-args -fno-caret-diagnostics -stdlib=libstdc++
