--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -115,6 +115,11 @@ jobs:
                   python-version: 3.8
             - name: Install PyYAML
               run: pip install pyyaml
+            - uses: actions/cache@v1
+              with:
+                  path: msvc-preview
+                  key: msvc-pre-cache-${{ github.sha }}
+                  restore-keys: msvc-pre-cache-
             - name: Install MSVC
               run: |
                   $LOC="$PWD"
