--- a/data.yaml
+++ b/data.yaml
@@ -69,9 +69,7 @@ attributes:
       value: 201803
     gcc:
     - value: 201803
-    msvc:
-    - since: C++20
-      value: 201803
+    msvc: null
 - name: nodiscard
   rows:
   - value: 201603
